--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "description": "Helpers library for Jobber app",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "scripts": {
     "build": "npm run build:cjs && npm run build:esm && tsc --outDir build/src && node scripts/build-package.js",
@@ -22,7 +22,7 @@
   "author": "sayargyi",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/SayarGyi007-lab/jobber-shared.git"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -39,8 +39,15 @@
   },
   "types": "./src/index.d.ts",
   "dependencies": {
+    "@elastic/elasticsearch": "^9.2.1",
+    "cloudinary": "^2.9.0",
     "express": "^5.2.1",
-    "typescript": "^5.9.3"
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.6",
+    "typescript": "^5.9.3",
+    "winston": "^3.19.0",
+    "winston-elasticsearch": "^0.19.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.6",
