--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "version": "0.0.9",
+  "version": "0.0.10",
   "license": "MIT",
+  "main": "build/cjs/index.js",
   "types": "./src/index.d.ts",
   "description": "Helpers library for Jobber app",
   "engines": {
@@ -33,8 +34,8 @@
   ],
   "exports": {
     ".": {
-      "import": "./src/index.d.ts",
-      "require": "./src/index.d.ts"
+      "import": "./src/index.js",
+      "require": "./src/index.js"
     }
   },
 
