--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.17",
+  "version": "0.0.18",
   "license": "MIT",
-  "main": "build/cjs/index.js",
-  "types": "./src/index.d.ts",
+  "main": "./cjs/index.js",
+  "types": "src/index.d.ts",
   "description": "Helpers library for Jobber app",
   "engines": {
     "node": ">=20"
@@ -28,13 +28,10 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
-  "files": [
-    "build"
-  ],
   "exports": {
     ".": {
-      "import": "./build/esm/index.js",
-      "require": "./build/cjs/index.js"
+      "import": "./esm/index.js",
+      "require": "./cjs/index.js"
     }
   },
   "dependencies": {
